# etiquetado_voila

./: .gitignore  README.md  environment.yml  pyproject.toml
apps/: apps.py
doc/: README.md  api.ipynb  app.ipynb  basic_app.ipynb  basic_observer.ipynb  etiquetdo.ipynb  etiquetdo_converter.ipynb  metadata_app.ipynb  tag_convert.ipynb
doc/files/yaml_templates/: demo.yaml
doc/yaml_templates/: yaml_demo.yaml
etiquetado_voila/api/: handler.py
etiquetado_voila/apps/: apps.py  fileobserver.py  metadata.py  pieces.py
